--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "googleapis": "^136.0.0",
+    "lucide-react": "^0.378.0",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "react": "^18",
